--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
         "eslint": "^4.17.0",
         "eslint-plugin-babel": "^4.1.2",
         "eslint-plugin-react": "^7.6.1",
@@ -32,7 +34,7 @@
     },
     "scripts": {
         "build": "gulp build",
-        "clean": "eslint --fix ./src/**.js",
+        "clean": "eslint --fix ./src/**",
         "hook": "sh ./hooks/hook.sh",
         "prepublish": "sh ./hooks/hook.sh && gulp build",
         "watch": "gulp watch"
