--- a/package.json
+++ b/package.json
@@ -1,27 +1,7 @@
 {
-    "dependencies": {
-        "isomorphic-fetch": "^2.2.1",
-        "redux": "^3.7.2",
-        "redux-saga": "^0.16.0",
-        "redux-saga-debounce-effect": "^0.2.2"
-    },
+    "dependencies": {},
     "description": "React Redux Tools for making redux a breeze",
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.0.0",
-        "babel-plugin-transform-async-to-generator": "^6.24.1",
-        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
-        "eslint": "^4.17.0",
-        "eslint-plugin-babel": "^4.1.2",
-        "eslint-plugin-react": "^7.6.1",
-        "gulp": "^3.9.1",
-        "gulp-babel": "^7.0.0",
-        "gulp-eslint": "^4.0.0",
-        "jest": "^22.2.2"
-    },
+    "devDependencies": {},
     "files": [
         "dist"
     ],
@@ -37,7 +17,6 @@
         "build": "gulp build",
         "clean": "eslint --fix ./src/**",
         "hook": "sh ./hooks/hook.sh",
-        "prepublish": "sh ./hooks/hook.sh && gulp build",
         "test": "gulp build && jest",
         "watch": "gulp watch"
     },
