--- a/example/package.json
+++ b/example/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "example",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "eslint-plugin-babel": "^5.1.0",
-    "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+	"name": "example",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"eslint-plugin-babel": "^5.1.0",
+		"react": "^16.4.1",
+		"react-bootstrap": "^0.32.1",
+		"react-dom": "^16.4.2",
+		"react-scripts": "1.1.4"
+	},
+	"resolutions": {
+		"eslint": "4.18.2",
+		"js-yaml": "3.13.1",
+		"mem": "4.0.0",
+		"webpack-dev-server": "3.1.11"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
+	}
 }
